--- a/Laboratorio2_C23310/Laboratorio2.B/Pagina.html
+++ b/Laboratorio2_C23310/Laboratorio2.B/Pagina.html
@@ -5,7 +5,6 @@
 </head>
 
 <body>
-
     <ul id="lista">
         <li>Elemento1</li>
         <li>Elemento2</li>
@@ -17,4 +16,6 @@
     <input type="button" value="Agregar elemento" onclick="agregar();">
 	<input type="button" value="Cambiar fondo" onclick="cambiarFondo();">
 	<input type="button" value="Borrar elemento" onclick="borrar();">
-</body></html>
+    <script src="script.js"></script>
+</body>
+</html>
